--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -60,7 +60,8 @@ jobs:
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: "_site${{ steps.pages.outputs.base_path }}"
+          path: "_site"
+          # path: "_site${{ steps.pages.outputs.base_path }}"
 
   deploy:
     environment:
